--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/C1.png" />
+    <link rel="apple-touch-icon" href="/assets/C1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="AR Clothing Store with virtual try-on experience" />
+    <title>AR Clothing Store | Virtual Try-On</title>
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="AR Clothing Store | Virtual Try-On" />
+    <meta property="og:description" content="Try on clothes virtually with our AR technology" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
